# rustyfixerai

./: Cargo.toml  README.md
src/: main.rs
src/modules/: cargo_expert.rs  cli.rs  issue_detector.rs  knowledge_cache.rs  llm_interface.rs  mod.rs  patch_engine.rs  project_analyzer.rs  quick_fixes.rs  web_agent.rs
