[package]
name = "rusty-fixer-ai"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
indicatif = "0.17.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.19.0"
url = "2.5.2"

# --- НОВЫЕ ЗАВИСИМОСТИ ---
# Для продвинутого CLI
clap = { version = "4.5", features = ["derive"] } 
# Для локального кэша знаний
rusqlite = { version = "0.31", features = ["bundled"] } 
# Для умного применения патчей
diff = "0.1.13"