[package]
name = "rusty-fixer-ai"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.0.0"
indicatif = "0.18.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.24.0"
url = "2.5.2"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
diff = "0.1.13"

# --- НОВЫЕ ЗАВИСИМОСТИ ДЛЯ РАСШИРЕННОЙ ФУНКЦИОНАЛЬНОСТИ ---
# Для безопасного редактирования Cargo.toml
toml_edit = "0.23.4"
# Для рекурсивного обхода директорий проекта
walkdir = "2"
# Для более удобной работы с ошибками
anyhow = "1.0"
# Для создания временных директорий при верификации
tempfile = "3.10"
# Для кодирования URL в поисковых запросах
urlencoding = "2.1"