[package]
name = "rusty-fixer-ai"
version = "2.0.0"
edition = "2021"
license = "MIT"
description = "Autonomous agent that fixes Rust build errors using web search + LLM and verifies fixes."
repository = "https://example.com/your/repo"
readme = "README.md"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "3"
diff = "0.1"
indicatif = "0.18"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
scraper = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
toml_edit = "0.23"
url = "2"
urlencoding = "2"
walkdir = "2"

[build-dependencies]
